k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang-gin
  labels:
    app: golang-gin
    tier: backend
spec:
  type: LoadBalancer
  # type: NodePort
  ports:
    - targetPort: 8080
      port: 80
  selector:
    app: golang-gin
    tier: backend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: golang-gin
  labels:
    app: golang-gin
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: golang-gin
      tier: backend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: golang-gin
        tier: backend
        version: "0"
    spec:
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #       - matchExpressions:
      #         - key: cloud.google.com/gke-preemptible
      #           operator: DoesNotExist
      containers:
        - name: golang-gin
          image: gcr.io/hypnotic-bounty-289511/golang-gin:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /api/ping
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/ping
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 60
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 10
---
#########################################################
apiVersion: v1
kind: Service
metadata:
  name: react-redux
  labels:
    app: react-redux
    tier: frontend
spec:
  type: LoadBalancer
  # type: NodePort
  ports:
    - port: 80
      targetPort: 4100
  selector:
    app: react-redux
    tier: frontend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: react-redux
  labels:
    app: react-redux
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-redux
      tier: frontend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: react-redux
        tier: frontend
        version: "0"
    spec:
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #       - matchExpressions:
      #         - key: cloud.google.com/gke-preemptible
      #           operator: DoesNotExist
      containers:
        - name: react-redux
          image: gcr.io/hypnotic-bounty-289511/react-redux:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4100
          livenessProbe:
            httpGet:
              path: /
              port: 4100
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 4100
            initialDelaySeconds: 10
            periodSeconds: 60
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 10
